--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <a href="#" id="nav-home">Home</a>
       <a href="#features">Features</a>
       <a href="#insights">Insights</a>
-      <a href="#blog">Blog</a>
+      <a href="blog.html">Blog</a>
       <a href="#" id="auth-link">Log In</a>
     </nav>
   </header>
@@ -180,3 +180,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
