--- a/insights.html
+++ b/insights.html
@@ -11,7 +11,7 @@
   <header class="header">
     <div class="logo">🌿 WellNest</div>
     <nav>
-      <a href="index.html">Home</a>
+      <a href="#index">Home</a>
       <a href="insights.html" class="active">Insights</a>
       <a href="blog.html">Blog</a>
       <a href="login.html">Log In</a>
