--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav id="main-nav">
       <a href="#" id="nav-home">Home</a>
       <a href="#features">Features</a>
-      <a href="#insights">Insights</a>
+      <a href="insights.html">Insights</a>
       <a href="blog.html">Blog</a>
       <a href="#" id="auth-link">Log In</a>
     </nav>
@@ -180,4 +180,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
